@@ -1,3 +1,6 @@
+2/20/00:	Loads of improvements to the USECODE interpreter, especially
+		with conversations.
+
 2/10/00:	V0.10 - Added USECODE interpreter.  
 		Removed my previous conversation engine (which I'll use in
 		another project).
